# convolution-neural-network-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/layers/: batch_norm.h  conv2d.h  dense.h  dropout.h  flatten.h  global_avg_pool.h  max_pool2d.h  relu.h  res_block.h
include/loss/: softmax_cross_entropy_loss.h
include/math/: tensor.h  utils.h
include/network/: network.h
include/optimizer/: sgd.h
include/training/: cifar_10.h  trainer.h
models/: best_model_meta.txt
src/: main.cpp
src/layers/: batch_norm.cpp  conv2d.cpp  dense.cpp  dropout.cpp  flatten.cpp  global_avg_pool.cpp  max_pool2d.cpp  relu.cpp  res_block.cpp
src/loss/: softmax_cross_entropy_loss.cpp
src/math/: tensor.cpp
src/network/: network.cpp
src/optimizer/: sgd.cpp
src/training/: cifar_10.cpp  trainer.cpp
tests/: test_checkpoint.cpp  test_layers.cpp  test_network.cpp  test_overfit.cpp  test_tensor.cpp
